Convert ITAutoCompactionTest to EmbeddedAutoCompactionTest